[package]
name = "pyext-pulldown-cmark"
version = "0.1.0"
authors = ["Felipe Morales <hel.sheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = 'pulldowncmark'
crate-type = ["cdylib"]

[dependencies.pulldown-cmark]
version = "0.7.1"
features = ["simd"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
